tests/fail/no_eq_sign.rs
concat_idents::concat_idents!(fn_name no_eq {
    fn fn_name() {
        /* there must be an eq sign */
    }
});

fn main() {}
