tests/fail/no_eq_sign.stderr
error: expected `=`
 --> $DIR/no_eq_sign.rs:1:39
  |
1 | concat_idents::concat_idents!(fn_name no_eq {
  |                                       ^^^^^
